# capivara-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: bcb_api.md  fase2.md  prodgo.md
src/capivara_mcp/: server.py
src/capivara_mcp/tools/: _validation.py  atividade.py  expectativas.py  inflacao.py  ptax.py  selic.py  taxa_juros.py
tests/: conftest.py  test_atividade.py  test_expectativas.py  test_inflacao.py  test_integration.py  test_mcp_protocol.py  test_ptax.py  test_selic.py  test_taxa_juros.py  test_validation.py
